crates/service/tests/type_hierarchy/snapshots/features__type_hierarchy__t1_subtypes-2.snap
---
source: crates/service/tests/type_hierarchy/mod.rs
expression: subtypes
---
[
  {
    "name": "$t2",
    "kind": 5,
    "detail": "struct",
    "uri": "untitled:test",
    "range": {
      "start": {
        "line": 3,
        "character": 2
      },
      "end": {
        "line": 3,
        "character": 31
      }
    },
    "selectionRange": {
      "start": {
        "line": 3,
        "character": 8
      },
      "end": {
        "line": 3,
        "character": 11
      }
    }
  }
]
