crates/service/tests/type_hierarchy/snapshots/features__type_hierarchy__t1_supertypes.snap
---
source: crates/service/tests/type_hierarchy/mod.rs
expression: prepare
---
[
  {
    "name": "$t1",
    "kind": 5,
    "detail": "struct",
    "uri": "untitled:test",
    "range": {
      "start": {
        "line": 2,
        "character": 2
      },
      "end": {
        "line": 2,
        "character": 27
      }
    },
    "selectionRange": {
      "start": {
        "line": 2,
        "character": 8
      },
      "end": {
        "line": 2,
        "character": 11
      }
    }
  }
]
