crates/service/tests/type_hierarchy/snapshots/features__type_hierarchy__t2_supertypes-2.snap
---
source: crates/service/tests/type_hierarchy/mod.rs
expression: supertypes
---
[
  {
    "name": "$t1",
    "kind": 5,
    "detail": "struct",
    "uri": "untitled:test",
    "range": {
      "start": {
        "line": 2,
        "character": 2
      },
      "end": {
        "line": 2,
        "character": 27
      }
    },
    "selectionRange": {
      "start": {
        "line": 2,
        "character": 8
      },
      "end": {
        "line": 2,
        "character": 11
      }
    }
  }
]
