crates/service/tests/type_hierarchy/snapshots/features__type_hierarchy__t3_subtypes-2.snap
---
source: crates/service/tests/type_hierarchy/mod.rs
expression: subtypes
---
[
  {
    "name": "$t4",
    "kind": 5,
    "detail": "struct",
    "uri": "untitled:test",
    "range": {
      "start": {
        "line": 5,
        "character": 2
      },
      "end": {
        "line": 5,
        "character": 31
      }
    },
    "selectionRange": {
      "start": {
        "line": 5,
        "character": 8
      },
      "end": {
        "line": 5,
        "character": 11
      }
    }
  },
  {
    "name": "$t5",
    "kind": 5,
    "detail": "struct",
    "uri": "untitled:test",
    "range": {
      "start": {
        "line": 6,
        "character": 2
      },
      "end": {
        "line": 6,
        "character": 31
      }
    },
    "selectionRange": {
      "start": {
        "line": 6,
        "character": 8
      },
      "end": {
        "line": 6,
        "character": 11
      }
    }
  }
]
