crates/service/tests/type_hierarchy/snapshots/features__type_hierarchy__t4_supertypes-2.snap
---
source: crates/service/tests/type_hierarchy/mod.rs
expression: supertypes
---
[
  {
    "name": "$t3",
    "kind": 5,
    "tags": [
      1
    ],
    "detail": "struct",
    "uri": "untitled:test",
    "range": {
      "start": {
        "line": 5,
        "character": 2
      },
      "end": {
        "line": 5,
        "character": 31
      }
    },
    "selectionRange": {
      "start": {
        "line": 5,
        "character": 8
      },
      "end": {
        "line": 5,
        "character": 11
      }
    }
  }
]
