crates/service/tests/type_hierarchy/snapshots/features__type_hierarchy__t5_subtypes.snap
---
source: crates/service/tests/type_hierarchy/mod.rs
expression: prepare
---
[
  {
    "name": "$t5",
    "kind": 5,
    "detail": "struct",
    "uri": "untitled:test",
    "range": {
      "start": {
        "line": 7,
        "character": 2
      },
      "end": {
        "line": 7,
        "character": 31
      }
    },
    "selectionRange": {
      "start": {
        "line": 7,
        "character": 8
      },
      "end": {
        "line": 7,
        "character": 11
      }
    }
  }
]
